fixing some dark mode issues and applying new colors

--- a/www/Themes/Generic-theme/Variables-css/color-variables.css
+++ b/www/Themes/Generic-theme/Variables-css/color-variables.css
@@ -1,6 +1,6 @@
 :root {
     /** Main colors **/
-    --color-primary-light: #2196F3;
+    --color-primary-light: #64B5F6;
     --color-primary-dark: #10069F;
     --color-success : #88b917 ;
     --color-warning : #ff9a13 ;
